force-app/main/default/objects/IntegrationFieldMapping__mdt/IntegrationFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Integration Field Mapping</label>
    <pluralLabel>Integration Field Mappings</pluralLabel>
</CustomObject>