force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/APIAttributeName__c.field-meta.xml
<CustomField>
    <fullName>APIAttributeName__c</fullName>
    <label>API Attribute Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>