force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/FieldAPIname__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIname__c</fullName>
    <label>Salesforce field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>