force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/IntegrationStream__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStream__c</fullName>
    <label>Integration Stream</label>
    <referenceTo>IntegrationStream__mdt</referenceTo>
    <relationshipLabel>Integration Field Mappings</relationshipLabel>
    <relationshipName>IntegrationFieldMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>