force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/isRequestfield__c.field-meta.xml
<CustomField>
    <fullName>isRequestfield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Request field</label>
    <type>Checkbox</type>
</CustomField>