force-app/main/default/objects/IntegrationFieldMapping__mdt/fields/isResponseField__c.field-meta.xml
<CustomField>
    <fullName>isResponseField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Response field</label>
    <type>Checkbox</type>
</CustomField>